<resources>
    <string name="app_name">滑呗</string>
    <string name="test_content">测试内容</string>

    <string name="server_client_id">1072549763156-gkm20kqv0epgk1n6diaqb9467k730f7l.apps.googleusercontent.com</string>
    <string name="facebook_app_id">xxxxxxx</string>
    <string name="fb_login_protocol_scheme">fb15477621189....</string>

    <string name="tv_country">Country</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_preference">Preference</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_system_permission">System Permission</string>
    <string name="tv_language">Language</string>
    <string name="tv_terms_service">Terms of Service</string>
    <string name="tv_contact_us">Contact Us</string>
    <string name="english">英语</string>
    <string name="japanese">日语</string>

    <string name="set_language">设置语言</string>
    <string name="logout">Log out</string>
    <string name="regist">Regist</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_tips1"> By logging in,you agree to our</string>
    <string name="login_tips2"> Terms of Use </string>
    <string name="login_tips3"> and </string>
    <string name="login_tips4"> Privacy Policy</string>
    <string name="login_divider_text"> - or connect with -</string>
    <string name="login_no_account">Don’t have an account?</string>
    <string name="sign_up">Sign_up</string>
    <string name="have_account">Have an account?</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="reset_tips"> Please enter your email address that you
    used to register. We’ll send you an email
    with a link to reset password.</string>

    <string name="prefer">Prefer</string>
    <string name="ski">Ski</string>
    <string name="snowboard">Snowboard</string>
    <string name="finish">Finish</string>
    <string name="am">Am</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="country">Country</string>
    <string name="select_country">Select country</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>


    <string name="common_loading">加载中&#8230;</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <!-- 通用的 -->
    <string name="common_crash_hint">应用出了点小意外，正在重新启动</string>
    <string name="common_network_error">当前网络不可用，请检查网络设置</string>
    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>
    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>
    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>

    <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>
    <string name="common_no_more_data">没有更多数据了</string>

    <string name="common_web_location_permission_title">当前网站需要获取您的地理位置</string>
    <string name="common_web_location_permission_allow">授予</string>
    <string name="common_web_location_permission_reject">拒绝</string>
    <!-- 网络请求 -->
    <string name="http_loading">加载中&#8230;</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_account_error">账号异常，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

    <!-- 状态布局 -->
    <string name="status_layout_no_data">空空如也</string>
    <string name="status_layout_error_request">请求出错，点击重试</string>
    <string name="status_layout_error_network">网络错误，点击重试</string>

    <!-- 首页 -->
    <string name="home_exit_hint">再按一次退出</string>

</resources>