<?xml version="1.0" encoding="utf-8"?><!-- 首页界面的左侧侧边栏界面布局文件 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:textColor="@color/common_text_color_333"
                android:textSize="36sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:paddingTop="10dp"
                        app:hintTextAppearance="@style/FloatingStyle">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:text="" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:paddingTop="10dp"
                        app:hintTextAppearance="@style/FloatingStyle">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:text="" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/color_text_blue_2f"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        style="@style/ButtonStyle_black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:height="50dp"
                        android:enabled="false"
                        android:text="@string/login"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:clickable="true"
                            android:text="@string/login_tips1"
                            android:textColor="@color/common_text_color_333"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_login_terms_use"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="3dp"
                            android:layout_marginRight="3dp"
                            android:clickable="true"
                            android:text="@string/login_tips2"
                            android:textColor="@color/color_text_blue_2f"
                            android:textSize="11sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:clickable="true"
                            android:text="@string/login_tips3"
                            android:textColor="@color/common_text_color_333"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_login_privacy_policy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="3dp"
                            android:clickable="true"
                            android:text="@string/login_tips4"
                            android:textColor="@color/color_text_blue_2f"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/login_divider_text"
                        android:textColor="@color/common_text_color_333"
                        android:textSize="11sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_google"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginRight="10dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/icon_google"></ImageView>

                        <ImageView
                            android:id="@+id/iv_fb"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="20dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/icon_facebook"></ImageView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:clickable="true"
                            android:text="@string/login_no_account"
                            android:textColor="@color/common_text_color_333"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_sign_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="3dp"
                            android:clickable="true"
                            android:text="@string/sign_up"
                            android:textColor="@color/color_text_blue_2f"
                            android:textSize="11sp" />

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>